--- a/txt/licencjat.tex
+++ b/txt/licencjat.tex
@@ -274,7 +274,7 @@ $p$ wektor punktów struktury wzorcowej
 $q$ wektor punktów wybranego regionu struktury celu
 \\
 \\
-Algorytm Kabsch'a składa się z 3 kroków:
+Algorytm Kabsch'a składa się z 3 kroków (http://cnx.org/contents/HV-RsdwL@23/Molecular-Distance-Measures):
 \begin{enumerate}
 \item \textbf{Translacja} \\
 W pierwszym kroku należy dokonać obliczenia centroidów ($Cp$ i $Cq$) obu struktur i dokonać przesunięcia struktury wzorca o wektor $\vec{T}$ rozpięty pomiędzy tymi punktami tak, aby nałożyły się one na siebie. Do obliczenia centroidu można zastosować na przykład równanie na środek geometryczny: 
